--- a/Kitodo/src/main/webapp/pages/tasks.xhtml
+++ b/Kitodo/src/main/webapp/pages/tasks.xhtml
@@ -69,7 +69,7 @@
                                            rendered="#{item.processingStatus == 'INWORK' and item.processingUser.id != LoginForm.myBenutzer.id and (!item.batchStep || !item.batchAvailable)}"
                                            title="#{msgs.inBearbeitungDurch}: #{(item.processingUser!=null and item.processingUser.id!=0 ? item.processingUser.fullName : '')}">
                                 <i class="fa fa-bell-slash"/>
-                                <f:setPropertyActionListener target="#{AktuelleSchritteForm.currentTask}" value="#{item}"/>
+                                <f:setPropertyActionListener target="#{AktuelleSchritteForm.currentTask}" value="#{AktuelleSchritteForm.getTaskById(item.id)}"/>
                             </h:commandLink>
 
                             <!-- take over batch -->
@@ -77,7 +77,7 @@
                                            rendered="#{item.processingStatus == 'OPEN' and item.batchStep and item.batchAvailable}"
                                            title="#{msgs.bearbeitungDiesesSchrittsUebernehmen}">
                                 <h:graphicImage value="/pages/images/buttons/admin3a.gif" alt="edit"/>
-                                <f:setPropertyActionListener target="#{AktuelleSchritteForm.currentTask}" value="#{item}"/>
+                                <f:setPropertyActionListener target="#{AktuelleSchritteForm.currentTask}" value="#{AktuelleSchritteForm.getTaskById(item.id)}"/>
                             </h:commandLink>
 
                             <!-- edit batch step (this user) -->
@@ -85,7 +85,7 @@
                                            rendered="#{item.processingStatus == 'INWORK' and item.processingUser.id == LoginForm.myBenutzer.id and item.batchStep and item.batchAvailable}"
                                            title="#{msgs.bearbeitungDiesesSchrittsUebernehmen}">
                                 <h:graphicImage value="/pages/images/buttons/admin3.gif" alt="edit"/>
-                                <f:setPropertyActionListener target="#{AktuelleSchritteForm.currentTask}" value="#{item}"/>
+                                <f:setPropertyActionListener target="#{AktuelleSchritteForm.currentTask}" value="#{AktuelleSchritteForm.getTaskById(item.id)}"/>
                             </h:commandLink>
 
                             <!-- edit batch step (different user) -->
@@ -93,7 +93,7 @@
                                            rendered="#{item.processingStatus == 'INWORK' and item.processingUser.id != LoginForm.myBenutzer.id and item.batchStep and item.batchAvailable}"
                                            title="#{msgs.inBearbeitungDurch}: #{(item.processingUser!=null and item.processingUser.id!=0 ? item.processingUser.fullName : '')}">
                                 <h:graphicImage value="/pages/images/buttons/admin3c.gif" alt="edit"/>
-                                <f:setPropertyActionListener target="#{AktuelleSchritteForm.currentTask}" value="#{item}"/>
+                                <f:setPropertyActionListener target="#{AktuelleSchritteForm.currentTask}" value="#{AktuelleSchritteForm.getTaskById(item.id)}"/>
                             </h:commandLink>
                         </h:form>
                     </p:column>
