--- a/Kitodo/src/main/webapp/pages/docketEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/docketEdit.xhtml
@@ -83,7 +83,7 @@
                                 <f:selectItem itemLabel="#{msgs.clientNon}" itemValue="noClient"/>
                                 <f:selectItems value="#{DocketForm.clients}" var="client" itemValue="#{client}"
                                                itemLabel="#{client.name}"/>
-                                <p:ajax event="change" oncomplete="jQuery('#editForm\\:saveButtonToggler').click()"/>
+                                <p:ajax event="change" oncomplete="toggleSave()"/>
                             </p:selectOneMenu>
                         </div>
                     </p:row>
