Fix id for user config page

--- a/Kitodo/src/main/webapp/pages/userConfiguration.xhtml
+++ b/Kitodo/src/main/webapp/pages/userConfiguration.xhtml
@@ -21,7 +21,7 @@
     </ui:define>
 
     <ui:define name="pageTabView">
-        <p:tabView>
+        <p:tabView id="userConfigurationTabView">
             <p:tab title="#{msgs.settings}">
                 <ui:include src="/WEB-INF/templates/includes/userConfiguration/userSettings.xhtml"/>
             </p:tab>
