--- a/Kitodo/src/main/webapp/pages/projects.xhtml
+++ b/Kitodo/src/main/webapp/pages/projects.xhtml
@@ -65,7 +65,7 @@
     </ui:define>
 
     <ui:define name="breadcrumbs">
-        <li><h:link value="#{msgs.startPage}" outcome="start"/></li>
+        <li><h:link value="#{msgs.desktop}" outcome="desktop"/></li>
         <li><a href="">#{msgs.projects}</a></li>
     </ui:define>
 </ui:composition>
