--- a/Kitodo/src/main/webapp/pages/userConfiguration.xhtml
+++ b/Kitodo/src/main/webapp/pages/userConfiguration.xhtml
@@ -32,7 +32,7 @@
     </ui:define>
 
     <ui:define name="breadcrumbs">
-        <li><h:link value="#{msgs.startPage}" outcome="start"/></li>
+        <li><h:link value="#{msgs.desktop}" outcome="desktop"/></li>
         <li><a href="">#{msgs.userConfiguration}</a></li>
     </ui:define>
 </ui:composition>
