--- a/Kitodo/src/main/webapp/pages/desktop.xhtml
+++ b/Kitodo/src/main/webapp/pages/desktop.xhtml
@@ -21,6 +21,10 @@
                 <div class="content-header">
                     <div class="ui-panel-content ui-widget-content">
                         <h3>#{msgs.tasks}</h3>
+                        <p:commandButton icon="fa fa-repeat fa-lg"
+                                  styleClass="secondary-button reload-button">
+                                <p:ajax update="taskTable"/>
+                        </p:commandButton>
                         <p:button id="allTasks" value="#{msgs.allTasks}"
                                   outcome="tasks"
                                   icon="fa fa-search fa-lg" iconPos="right" styleClass="secondary-button"/>
@@ -31,10 +35,15 @@
             <p:panel styleClass="desktop-widget">
                 <div class="content-header">
                     <div class="ui-panel-content ui-widget-content">
-                            <h3>#{msgs.processes}</h3>
-                            <p:button id="allProcesses" value="#{msgs.allProcesses}"
-                                      outcome="processes"
-                                      icon="fa fa-search fa-lg" iconPos="right" styleClass="secondary-button"/>
+                        <h3>#{msgs.processes}</h3>
+                        <p:commandButton icon="fa fa-repeat fa-lg"
+                                  styleClass="secondary-button reload-button">
+                                <p:ajax update="processesForm:processesTable"/>
+                        </p:commandButton>
+                        <p:button id="allProcesses" value="#{msgs.allProcesses}"
+                                  outcome="processes"
+                                  icon="fa fa-search fa-lg" iconPos="right" styleClass="secondary-button"/>
+
                     </div>
                 </div>
                 <ui:include src="/WEB-INF/templates/includes/processes/processList.xhtml"/>
@@ -43,6 +52,10 @@
                 <div class="content-header">
                     <div class="ui-panel-content ui-widget-content">
                         <h3>#{msgs.projects}</h3>
+                        <p:commandButton icon="fa fa-repeat fa-lg"
+                                  styleClass="secondary-button reload-button">
+                            <p:ajax update="projectsTable"/>
+                        </p:commandButton>
                         <p:button id="allProjects" value="#{msgs.allProjects}"
                                   outcome="projects"
                                   icon="fa fa-search fa-lg" iconPos="right" styleClass="secondary-button"/>
@@ -52,7 +65,13 @@
             </p:panel>
             <p:panel styleClass="desktop-widget">
                 <div class="content-header">
-                    <h3>Statistik</h3>
+                    <div class="ui-panel-content ui-widget-content">
+                        <h3>Statistik</h3>
+                        <p:commandButton icon="fa fa-repeat fa-lg"
+                                  styleClass="secondary-button reload-button">
+                            <p:ajax update="statisticsTable"/>
+                        </p:commandButton>
+                    </div>
                 </div>
                 <ui:include src="/WEB-INF/templates/includes/desktop/statisticWidget.xhtml"/>
             </p:panel>
