--- a/Kitodo/src/main/webapp/pages/desktop.xhtml
+++ b/Kitodo/src/main/webapp/pages/desktop.xhtml
@@ -13,9 +13,11 @@
 
 <ui:composition
         template="/WEB-INF/templates/base.xhtml"
+        xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:p="http://primefaces.org/ui">
     <ui:define name="content">
+        <h:outputScript name="desktop.js" target="body" library="js"/>
         <p:panelGrid columns="2" layout="grid" id="desktopGrid">
             <p:panel styleClass="desktop-widget">
                 <div class="content-header">
