--- a/Kitodo/src/main/webapp/pages/processFromTemplate.xhtml
+++ b/Kitodo/src/main/webapp/pages/processFromTemplate.xhtml
@@ -60,7 +60,7 @@
     </ui:define>
 
     <ui:define name="breadcrumbs">
-        <li><h:link value="#{msgs.startPage}" outcome="start"/></li>
+        <li><h:link value="#{msgs.desktop}" outcome="desktop"/></li>
         <li><h:link value="#{msgs.projects}" outcome="projects"/></li>
         <ui:fragment rendered="#{not empty ProzessverwaltungForm.process.title}">
             <li><a href="">#{msgs.processEdit}</a></li>
