--- a/Kitodo/src/main/webapp/pages/system.xhtml
+++ b/Kitodo/src/main/webapp/pages/system.xhtml
@@ -37,7 +37,7 @@
     </ui:define>
 
     <ui:define name="breadcrumbs">
-        <li><h:link value="#{msgs.startPage}" outcome="start"/></li>
+        <li><h:link value="#{msgs.desktop}" outcome="desktop"/></li>
         <li><a href="">#{msgs.system}</a></li>
     </ui:define>
 </ui:composition>
