--- a/Kitodo/src/main/webapp/pages/taskEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/taskEdit.xhtml
@@ -67,7 +67,7 @@
     </ui:define>
 
     <ui:define name="breadcrumbs">
-        <li><h:link value="#{msgs.startPage}" outcome="start"/></li>
+        <li><h:link value="#{msgs.desktop}" outcome="desktop"/></li>
         <li><h:link value="#{msgs.processes}" outcome="processes"/></li>
         <li><h:link value="#{msgs.processEdit}" outcome="processEdit?id=#{ProzessverwaltungForm.process.id}"/></li>
         <li><a href="">#{msgs.taskDetails}</a></li>
