Add actions to project widget on desktop

--- a/Kitodo/src/main/webapp/pages/desktop.xhtml
+++ b/Kitodo/src/main/webapp/pages/desktop.xhtml
@@ -68,7 +68,7 @@
             <p:panel styleClass="desktop-widget">
                 <div class="content-header">
                     <div class="ui-panel-content ui-widget-content">
-                        <h3>Statistik</h3>
+                        <h3>#{msgs.databaseStatistic}</h3>
                         <p:commandButton icon="fa fa-repeat fa-lg"
                                   styleClass="secondary-button reload-button">
                             <p:ajax update="statisticsTable"/>
