--- a/Kitodo/src/main/webapp/pages/currentTasksEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/currentTasksEdit.xhtml
@@ -46,7 +46,7 @@
                         <p:panel styleClass="content-header">
                             <p:commandButton id="addMessage" value="#{msgs.messageAdd}"
                                              action="#{AktuelleSchritteForm.addToWikiField}" ajax="false"
-                                             styleClass="button-filled-green"/>
+                                             styleClass="callto"/>
                         </p:panel>
                     </p:panel>
                 </h:form>
