--- a/Kitodo/src/main/webapp/pages/processFromTemplate.xhtml
+++ b/Kitodo/src/main/webapp/pages/processFromTemplate.xhtml
@@ -38,7 +38,7 @@
                   outcome="projects"
                   icon="fa fa-times fa-lg"
                   iconPos="right"
-                  styleClass="secondary-button"/>
+                  styleClass="secondary"/>
     </ui:define>
 
     <ui:define name="pageTabView">
