--- a/Kitodo/src/main/webapp/pages/projectEditMetsPopup.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEditMetsPopup.xhtml
@@ -116,7 +116,7 @@
                                      update="editForm"
                                      oncomplete="PF('editFolderDialog').hide();toggleSave()"
                                      value="#{msgs.apply}"
-                                     styleClass="button-filled-blue right"/>
+                                     styleClass="right"/>
                     <p:commandButton value="#{msgs.cancel}"
                                      onclick="PF('editFolderDialog').hide()"/>
                 </h:form>
