--- a/Kitodo/src/main/webapp/pages/searchProcess.xhtml
+++ b/Kitodo/src/main/webapp/pages/searchProcess.xhtml
@@ -24,8 +24,7 @@
                          action="#{SearchForm.filter}"
                          icon="fa fa-search"
                          iconPos="right"
-                         validateClient="true"
-                         styleClass="button-filled-blue">
+                         validateClient="true">
         </p:commandButton>
     </ui:define>
 
