--- a/Kitodo/src/main/webapp/pages/templateEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/templateEdit.xhtml
@@ -45,9 +45,13 @@
                          actionListener="#{TemplateForm.setSaveDisabled(false)}"
                          update="save"
                          style="display:none;"/>
-        <p:button id="cancel" value="#{msgs.cancel}"
-                  outcome="#{'projects'}" onclick="setConfirmUnload(false);"
-                  icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary-button"/>
+        <p:button id="cancel"
+                  value="#{msgs.cancel}"
+                  outcome="#{'projects'}"
+                  onclick="setConfirmUnload(false);"
+                  icon="fa fa-times fa-lg"
+                  iconPos="right"
+                  styleClass="secondary"/>
     </ui:define>
 
     <ui:define name="pageTabView">
