--- a/Kitodo/src/main/webapp/pages/userEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/userEdit.xhtml
@@ -51,14 +51,13 @@
                          icon="fa fa-floppy-o fa-lg"
                          iconPos="right"
                          disabled="#{BenutzerverwaltungForm.saveDisabled}"
-                         onclick="setConfirmUnload(false);PF('notifications').renderMessage({'summary':'#{msgs.userSaving}','detail':'#{msgs.youWillBeRedirected}','severity':'info'});"
-                         styleClass="button-filled-blue"/>
+                         onclick="setConfirmUnload(false);PF('notifications').renderMessage({'summary':'#{msgs.userSaving}','detail':'#{msgs.youWillBeRedirected}','severity':'info'});"/>
         <p:commandButton id="saveButtonToggler"
                          actionListener="#{BenutzerverwaltungForm.setSaveDisabled(false)}"
                          update="save"
                          style="display:none;"/>
         <p:button id="cancel" value="#{msgs.cancel}" outcome="users" onclick="setConfirmUnload(false);"
-                  icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary-button"/>
+                  icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary"/>
     </ui:define>
 
     <ui:define name="pageTabView">
@@ -170,7 +169,7 @@
                                  icon="fa fa-plus-circle fa-lg"
                                  immediate="true"
                                  rendered="#{isEditMode || isCreateMode}"
-                                 class="button-filled-green">
+                                 class="callto m-10">
                 </p:commandButton>
             </p:tab>
             <!-- projects -->
@@ -197,7 +196,7 @@
                                  icon="fa fa-plus-circle fa-lg"
                                  immediate="true"
                                  rendered="#{isEditMode || isCreateMode}"
-                                 class="button-filled-green">
+                                 class="callto m-10">
                 </p:commandButton>
             </p:tab>
             <!-- clients -->
