--- a/Kitodo/src/main/webapp/pages/ldapgroupEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/ldapgroupEdit.xhtml
@@ -49,7 +49,6 @@
                          action="#{LdapGruppenForm.saveLdapGroup}"
                          icon="fa fa-floppy-o fa-lg"
                          iconPos="right"
-                         styleClass="button-filled-blue"
                          disabled="#{LdapGruppenForm.saveDisabled}"
                          onclick="setConfirmUnload(false);PF('notifications').renderMessage({'summary':'#{msgs.ldapGroupSaving}','detail':'#{msgs.youWillBeRedirected}','severity':'info'});"
                          update="notifications"/>
@@ -57,9 +56,13 @@
                          actionListener="#{LdapGruppenForm.setSaveDisabled(false)}"
                          update="saveButton"
                          style="display:none;"/>
-        <p:button id="cancel" value="#{msgs.cancel}"
-                  outcome="users.jsf?id=#{BenutzerverwaltungForm.activeTabIndex}" onclick="setConfirmUnload(false);"
-                  icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary-button"/>
+        <p:button id="cancel"
+                  value="#{msgs.cancel}"
+                  outcome="users.jsf?id=#{BenutzerverwaltungForm.activeTabIndex}"
+                  onclick="setConfirmUnload(false);"
+                  icon="fa fa-times fa-lg"
+                  iconPos="right"
+                  styleClass="secondary"/>
     </ui:define>
 
     <ui:define name="pageTabView">
