--- a/Kitodo/src/main/webapp/pages/rulesetEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/rulesetEdit.xhtml
@@ -41,14 +41,17 @@
                          icon="fa fa-floppy-o fa-lg"
                          iconPos="right"
                          onclick="setConfirmUnload(false);PF('notifications').renderMessage({'summary':'#{msgs.rulesetSaving}','detail':'#{msgs.youWillBeRedirected}','severity':'info'});"
-                         disabled="#{RulesetForm.saveDisabled}"
-                         styleClass="button-filled-blue"/>
+                         disabled="#{RulesetForm.saveDisabled}"/>
         <p:commandButton id="saveButtonToggler"
                          actionListener="#{RulesetForm.setSaveDisabled(false)}"
                          update="save"
                          style="display:none;"/>
-        <p:button value="#{msgs.cancel}" outcome="projects.jsf?id=#{ProjekteForm.activeTabIndex}"
-                  onclick="setConfirmUnload(false);" icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary-button"/>
+        <p:button value="#{msgs.cancel}"
+                  outcome="projects.jsf?id=#{ProjekteForm.activeTabIndex}"
+                  onclick="setConfirmUnload(false);"
+                  icon="fa fa-times fa-lg"
+                  iconPos="right"
+                  styleClass="secondary"/>
     </ui:define>
 
     <ui:define name="pageTabView">
