--- a/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
@@ -49,7 +49,6 @@
                          action="#{BenutzergruppenForm.save}"
                          icon="fa fa-floppy-o fa-lg"
                          iconPos="right"
-                         styleClass="button-filled-blue"
                          onclick="setConfirmUnload(false);PF('notifications').renderMessage({
                                         'summary':'#{msgs.userGroupSaving}',
                                         'detail':'#{msgs.youWillBeRedirected}',
@@ -61,9 +60,13 @@
                          actionListener="#{BenutzergruppenForm.setSaveDisabled(false)}"
                          update="save"
                          style="display:none;"/>
-        <p:button id="cancel" value="#{msgs.cancel}" onclick="setConfirmUnload(false);"
+        <p:button id="cancel"
+                  value="#{msgs.cancel}"
+                  onclick="setConfirmUnload(false);"
                   outcome="users.jsf?id=#{BenutzerverwaltungForm.activeTabIndex}"
-                  icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary-button"/>
+                  icon="fa fa-times fa-lg"
+                  iconPos="right"
+                  styleClass="secondary"/>
     </ui:define>
 
     <ui:define name="pageTabView">
