--- a/Kitodo/src/main/webapp/pages/users.xhtml
+++ b/Kitodo/src/main/webapp/pages/users.xhtml
@@ -21,8 +21,11 @@
         <h3>#{msgs.users}</h3>
         <h:form id="newElementForm"
                 rendered="#{SecurityAccessController.isAdminOrHasAnyAuthorityForAny('addUser, addUserGroup')}">
-            <p:menuButton value="#{msgs.newElement}" id="newElementButton" icon="fa fa-plus-circle fa-lg"
-                          iconPos="right" styleClass="button-filled-green">
+            <p:menuButton value="#{msgs.newElement}"
+                          id="newElementButton"
+                          icon="fa fa-plus-circle fa-lg"
+                          iconPos="right"
+                          styleClass="callto">
                 <p:menuitem value="#{msgs.newUser}" id="newUserButton"
                             rendered="#{SecurityAccessController.isAdminOrHasAuthorityForAny('addUser')}"
                             action="#{BenutzerverwaltungForm.newUser}" icon="ui-icon-plusthick"/>
